fix : overflow-y: scroll on media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,8 @@ a {
   display: flex;
   flex-direction: column;
   gap: 10px;
+ overflow-y: scroll;
+
 }
 
 .tarjeta {
@@ -182,8 +184,8 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
-  padding: 20px;
+  gap: 10px;
+  padding: 10px;
   
 }
 .card {
@@ -293,6 +295,15 @@ a {
 
   }
 
+  /* .card {
+    width: 24%;
+  
+    box-shadow: 0 2px 7px #dfdfdf;
+    margin: 10px auto;
+    background: #fafafa;
+  
+  } */
+  
 
 
   .combo-box select {
